# sonos_cli

./: main.py  pyproject.toml  readme.md
